# remby

./: .gitignore  .pre-commit-config.yaml  README.md  gen_ai_context.sh  generate_datamodels.sh  main.py  pyproject.toml
.forgejo/workflows/: test.yml
examples/: basic_item_fetching.py
src/remby/: __init__.py  _client.py  client.py  exceptions.py
src/remby/_api/: base.py  items.py  system.py  users.py
src/remby/api/: base.py  items.py  system.py  users.py
src/remby/models/: items.py  response.py  user.py
src/remby/models/emby/: Actions.py  Api.py  Attributes.py  Authentication.py  Branding.py  Collections.py  Conditions.py  Connect.py  Devices.py  Drawing.py  Editors.py  Entities.py  Enums.py  GenericEdit.py  Globalization.py  IO.py  Images.py  Library.py  LiveTv.py  Logging.py  MediaEncoding.py  Notifications.py  Persistence.py  Playlists.py  Plugins.py  QueryResult_Api.py  QueryResult_Devices.py  QueryResult_LiveTv.py  QueryResult_UserLibrary.py  Session.py  Subtitles.py  Transcoding.py  UserLibrary.py  __init__.py  _internal.py
src/remby/models/emby/Common/: Interfaces.py  Plugins.py  __init__.py
src/remby/models/emby/Configuration/: ToneMapping.py
src/remby/models/emby/Dlna/: Profiles.py  __init__.py
src/remby/models/emby/MBBackup/: Api.py  __init__.py
src/remby/models/emby/Net/: Sockets.py  __init__.py
src/remby/models/emby/ProcessRun/: Metrics.py
src/remby/models/emby/RokuMetadata/: Api.py
tests/: test_items.py  test_system.py  test_user.py
tests/fixtures/: system_info.json  user_dto.json
tools/: fixture_generator.py  param_converter.py
